--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  share: ^2.0.4
   timer_count_down: ^2.2.0
   web_socket_channel: ^2.1.0
   firebase_core: ^1.8.0
