solved concurrency issue that caused move desync

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,12 @@ dependencies:
   share: ^2.0.4
   timer_count_down: ^2.2.0
   web_socket_channel: ^2.1.0
-  firebase_core: ^1.8.0
-  firebase_database: ^8.0.1
-  cloud_firestore: ^2.5.3
+  # firebase_core: ^1.8.0
+  firebase_core: ^1.11.0
+  # firebase_database: ^8.0.1
+  firebase_database: ^9.0.5
+  # cloud_firestore: ^2.5.3
+  cloud_firestore: ^3.1.6
   firebase_auth: ^3.1.4
   google_sign_in: ^5.2.1
   provider: ^6.0.1
