--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,10 +1,10 @@
 def localProperties = new Properties()
-def localPropertiesFile = rootProject.file('local.properties')
-if (localPropertiesFile.exists()) {
-    localPropertiesFile.withReader('UTF-8') { reader ->
-        localProperties.load(reader)
+    def localPropertiesFile = rootProject.file('local.properties')
+    if (localPropertiesFile.exists()) {
+        localPropertiesFile.withReader('UTF-8') { reader ->
+            localProperties.load(reader)
+        }
     }
-}
 
 def flutterRoot = localProperties.getProperty('flutter.sdk')
 if (flutterRoot == null) {
@@ -31,10 +31,15 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
     compileSdkVersion 30
+    signingConfigs {
+        debug {
+            storeFile file("/mnt/30D8EED6D8EE997C/Software/linux/Android/avdVirtualDevices/.android/debug.keystore")
+        }
+    }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
     }
 
     kotlinOptions {
@@ -48,10 +53,10 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.go"
-        minSdkVersion 21 
-        targetSdkVersion 30
-        versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+            minSdkVersion 21 
+            targetSdkVersion 30
+            versionCode flutterVersionCode.toInteger()
+            versionName flutterVersionName
     }
 
     buildTypes {
@@ -68,9 +73,9 @@ flutter {
 }
 
 dependencies {
-// FB implementation platform('com.google.firebase:firebase-bom:28.4.1')
-// FB implementation 'com.google.firebase:firebase-analytics-ktx'
+    // FB implementation platform('com.google.firebase:firebase-bom:28.4.1')
+    // FB implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation platform('com.google.firebase:firebase-bom:28.4.2')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.google.firebase:firebase-analytics'
+        implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+        implementation 'com.google.firebase:firebase-analytics'
 }
