--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,12 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Flutter-All",
+            "request": "launch",
+            "preLaunchTask": "Flutter-Launch-All",
+            "type": "dart",
+        },
+        {
             "name": "go",
             "request": "launch",
             "type": "dart"
