ui change in game screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,9 @@ dependencies:
   share: ^2.0.4
   web_socket_channel: ^2.1.0
   timer_count_down:
-    git: 
-      url : git@github.com:avnotaklu/simple_count_down.git
-      ref : master
+    git:
+      url: git@github.com:avnotaklu/simple_count_down.git
+      ref: master
   ntp: ^2.0.0
   # firebase_core: ^1.8.0
   firebase_core: ^1.11.0
@@ -73,8 +73,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
