--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,14 @@ dependencies:
       url: git@github.com:avnotaklu/simple_count_down.git
       ref: master
   ntp: ^2.0.0
-  # firebase_core: ^1.8.0
+ #  firebase_core:  any
+    # ^1.8.0
   firebase_core: ^1.11.0
-  # firebase_database: ^8.0.1
+  # firebase_database: any
+    # ^8.0.1
   firebase_database: ^9.0.5
-  # cloud_firestore: ^2.5.3
+  # cloud_firestore: any
+    #^2.5.3
   cloud_firestore: ^3.1.6
   firebase_auth: ^3.1.4
   google_sign_in: ^5.2.1
