--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -31,6 +31,10 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
     compileSdkVersion 31
+
+    ndkVersion '23.1.7779620'
+
+
     signingConfigs {
         debug {
             storeFile file("/mnt/30D8EED6D8EE997C/Software/linux/Android/avdVirtualDevices/.android/debug.keystore")
