--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.15.0-127.0.dev <3.0.0"
+  sdk: ">=3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -42,15 +42,15 @@ dependencies:
   ntp: ^2.0.0
  #  firebase_core:  any
     # ^1.8.0
-  firebase_core: ^1.11.0
+  firebase_core: ^2.13.1
   # firebase_database: any
     # ^8.0.1
-  firebase_database: ^9.0.5
+  firebase_database: ^10.2.2
   # cloud_firestore: any
     #^2.5.3
-  cloud_firestore: ^3.1.6
-  firebase_auth: ^3.1.4
-  google_sign_in: ^5.2.1
+  cloud_firestore: ^4.8.0
+  firebase_auth: ^4.6.2
+  google_sign_in: ^6.1.3
   provider: ^6.0.1
   flutter_signin_button: ^2.0.0
 
@@ -63,7 +63,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
