--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,9 +30,11 @@ apply plugin: 'com.google.gms.google-services'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion 31
 
-    ndkVersion '23.1.7779620'
+    namespace "com.example.go"
+    compileSdkVersion 34
+
+    // ndkVersion '23.1.7779620'
 
 
     signingConfigs {
@@ -61,7 +63,7 @@ android {
         }
         applicationId "com.example.go"
             minSdkVersion 21 
-            targetSdkVersion 31
+            targetSdkVersion 34
             buildToolsVersion "30.0.0"
             versionCode flutterVersionCode.toInteger()
             versionName flutterVersionName
