Asp password signup and login, google sign in

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   google_sign_in: ^6.2.1
   provider: ^6.0.1
   flutter_signin_button: ^2.0.0
+  fpdart: ^1.1.0
 
 dev_dependencies:
   flutter_test:
