--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   provider: ^6.0.1
   flutter_signin_button: ^2.0.0
   fpdart: ^1.1.0
+  signalr_netcore: ^1.4.0
 
 dev_dependencies:
   flutter_test:
