--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_signin_button: ^2.0.0
   fpdart: ^1.1.0
   signalr_netcore: ^1.4.0
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
