--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   fpdart: ^1.1.0
   signalr_netcore: ^1.4.0
   shared_preferences: ^2.3.2
+  test: ^1.25.7
+  mocktail: ^1.0.4
 
 dev_dependencies:
   flutter_test:
