--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -70,7 +73,6 @@ dependencies:
   firebase_core_web: any
   firebase_database_web: any
   google_sign_in_web: any
-  flutter_web_plugins: any
   http: any
 dev_dependencies:
   flutter_test:
