--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   shared_preferences: ^2.3.2
   test: ^1.25.7
   mocktail: ^1.0.4
+  responsive_framework: ^1.5.1
 
   cloud_firestore_web: any
   firebase_auth_web: any
