More ui, Profile half done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   firebase_database_web: any
   google_sign_in_web: any
   http: any
+  intl: ^0.20.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
