--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,12 @@ dependencies:
   provider: ^6.0.1
   flutter_signin_button: ^2.0.0
   fpdart: ^1.1.0
-  signalr_netcore: ^1.4.0
+
+  signalr_netcore:
+    git:
+      url: git@github.com:avnotaklu/signalr_client.git
+      ref: master
+
   shared_preferences: ^2.3.2
   test: ^1.25.7
   mocktail: ^1.0.4
