--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,17 +32,20 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
   cupertino_icons: ^1.0.2
   share_plus: ^10.0.2
   web_socket_channel: ^3.0.1
+  # barebones_timer:
+  #   git:
+  #     url: git@github.com:avnotaklu/barebones_timer.git
+  #     ref: master
+
   barebones_timer:
-    git:
-      url: git@github.com:avnotaklu/barebones_timer.git
-      ref: master
+    path: /home/ssp/dart/packages/barebones_timer
+
   ntp: ^2.0.0
 
   google_sign_in: ^6.2.1
@@ -72,8 +75,7 @@ dependencies:
   google_fonts: ^6.2.1
   audioplayers: ^6.1.0
   jwt_decoder: ^2.0.1
-
-
+  just_audio: ^0.9.43
 
 dev_dependencies:
   flutter_test:
@@ -100,6 +102,7 @@ flutter:
   assets:
     - assets/images/
     - assets/audio/
+    - assets/audio/interface/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -113,17 +116,105 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins/Poppins-BlackItalic.ttf
+          style: italic
+        - asset: assets/fonts/Poppins/Poppins-Black.ttf
+          style: italic
+        - asset: assets/fonts/Poppins/Poppins-BoldItalic.ttf
+          style: italic
+          weight: 700
+        - asset: assets/fonts/Poppins/Poppins-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Poppins/Poppins-ExtraBoldItalic.ttf
+          style: italic
+          weight: 800
+        - asset: assets/fonts/Poppins/Poppins-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/Poppins/Poppins-ExtraLightItalic.ttf
+          style: italic
+          weight: 200
+        - asset: assets/fonts/Poppins/Poppins-ExtraLight.ttf
+          weight: 200
+        - asset: assets/fonts/Poppins/Poppins-Italic.ttf
+          style: italic
+        - asset: assets/fonts/Poppins/Poppins-LightItalic.ttf
+          style: italic
+          weight: 300
+        - asset: assets/fonts/Poppins/Poppins-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Poppins/Poppins-MediumItalic.ttf
+          style: italic
+          weight: 500
+        - asset: assets/fonts/Poppins/Poppins-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Poppins/Poppins-Regular.ttf
+        - asset: assets/fonts/Poppins/Poppins-SemiBoldItalic.ttf
+          style: italic
+          weight: 600
+        - asset: assets/fonts/Poppins/Poppins-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Poppins/Poppins-ThinItalic.ttf
+          style: italic
+          weight: 100
+        - asset: assets/fonts/Poppins/Poppins-Thin.ttf
+          weight: 100
+
+    - family: Nunito
+      fonts:
+        - asset: assets/fonts/Nunito/static/Nunito-BlackItalic.ttf
+          style: italic
+          weight: 900
+        - asset: assets/fonts/Nunito/static/Nunito-Black.ttf
+          style: italic
+          weight: 900
+        - asset: assets/fonts/Nunito/static/Nunito-BoldItalic.ttf
+          style: italic
+          weight: 700
+        - asset: assets/fonts/Nunito/static/Nunito-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Nunito/static/Nunito-ExtraBoldItalic.ttf
+          style: italic
+          weight: 800
+        - asset: assets/fonts/Nunito/static/Nunito-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/Nunito/static/Nunito-ExtraLightItalic.ttf
+          style: italic
+          weight: 200
+        - asset: assets/fonts/Nunito/static/Nunito-ExtraLight.ttf
+          weight: 200
+        - asset: assets/fonts/Nunito/static/Nunito-Italic.ttf
+          style: italic
+        - asset: assets/fonts/Nunito/static/Nunito-LightItalic.ttf
+          style: italic
+          weight: 300
+        - asset: assets/fonts/Nunito/static/Nunito-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Nunito/static/Nunito-MediumItalic.ttf
+          style: italic
+          weight: 500
+        - asset: assets/fonts/Nunito/static/Nunito-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Nunito/static/Nunito-Regular.ttf
+        - asset: assets/fonts/Nunito/static/Nunito-SemiBoldItalic.ttf
+          style: italic
+          weight: 600
+        - asset: assets/fonts/Nunito/static/Nunito-SemiBold.ttf
+          weight: 600
+        # - asset: assets/fonts/Nunito/static/Nunito-ThinItalic.ttf
+        #   style: italic
+        #   weight: 100
+        # - asset: assets/fonts/Nunito/static/Nunito-Thin.ttf
+        #   weight: 100
+
+
+  #   - family: SpaceMono
   #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
+  #       - asset: fonts/RobotoMono-Regular.ttf
+  #       - asset: fonts/RobotoMono-Bold.ttf
   #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  # #
+  # # For details regarding fonts from package dependencies,
+  # # see https://flutter.dev/custom-fonts/#from-packages
