--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,7 @@ flutter:
   assets:
     - assets/images/
     - assets/audio/
+    - assets/images/gostones-render/
     - assets/audio/interface/
   #   - images/a_dot_ham.jpeg
 
